--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "3.x",
     "mongoose": "3.8.x",
     "nunjucks": "~1.0.1",
-    "extend": "~1.2.1"
+    "extend": "~1.2.1",
+    "moment": "~2.5.1"
   }
 }
