package.json : set ananda.js as main

--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "ananda-yoga-site",
-  "description": "a prototype website for ananda yoga",
-  "version": "0.0.1",
-  "private": true,
-  "dependencies": {
-    "express": "3.x",
-    "mongoose": "3.8.x",
-    "nunjucks": "~1.0.1",
-    "extend": "~1.2.1",
-    "moment": "~2.5.1",
-    "soap": "~0.4.0"
-  }
+    "name": "ananda-yoga-site",
+    "description": "a prototype website for ananda yoga",
+    "version": "0.0.1",
+    "private": true,
+    "main": "package.json",
+    "dependencies": {
+        "express": "3.x",
+        "mongoose": "3.8.x",
+        "nunjucks": "~1.0.1",
+        "extend": "~1.2.1",
+        "moment": "~2.5.1",
+        "soap": "~0.4.0"
+    }
 }
