--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "version": "0.0.1",
     "private": true,
     "main": "package.json",
+    "engines":{
+        "node":"0.10.x"
+    },
     "dependencies": {
         "express": "3.x",
         "mongoose": "3.8.x",
