--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-    "name": "ananda-yoga-site",
-    "description": "a prototype website for ananda yoga",
-    "version": "0.0.1",
-    "private": true,
-    "main": "package.json",
-    "engines":{
-        "node":"0.10.x"
-    },
-    "dependencies": {
-        "express": "3.x",
-        "mongoose": "3.8.x",
-        "nunjucks": "~1.0.1",
-        "extend": "~1.2.1",
-        "moment": "~2.5.1",
-        "soap": "~0.4.0"
-    }
+  "name": "ananda-yoga-site",
+  "description": "a prototype website for ananda yoga",
+  "version": "0.0.1",
+  "private": true,
+  "main": "package.json",
+  "engines": {
+    "node": "0.10.x"
+  },
+  "dependencies": {
+    "express": "3.x",
+    "mongoose": "3.8.x",
+    "nunjucks": "~1.0.1",
+    "extend": "~1.2.1",
+    "moment": "~2.5.1",
+    "soap": "~0.4.0",
+    "q": "~1.0.0"
+  }
 }
