--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "extend": "~1.2.1",
     "moment": "~2.5.1",
     "soap": "~0.4.0",
-    "q": "~1.0.0"
+    "q": "~1.0.0",
+    "sendgrid": "~1.0.2"
   }
 }
