--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "moment": "~2.5.1",
     "soap": "~0.4.0",
     "q": "~1.0.0",
-    "sendgrid": "~1.0.2"
+    "sendgrid": "~1.0.2",
+    "bcrypt-nodejs": "0.0.3"
   }
 }
