--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
     "q": "~1.0.0",
     "sendgrid": "~1.0.2",
     "bcrypt-nodejs": "0.0.3"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.2",
+    "grunt-contrib-less": "~0.10.0",
+    "grunt-contrib-watch": "~0.5.3"
   }
 }
