--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "soap": "~0.4.0",
     "q": "~1.0.0",
     "sendgrid": "~1.0.2",
-    "bcrypt-nodejs": "0.0.3"
+    "bcrypt-nodejs": "0.0.3",
+    "mongoose-q": "0.0.9"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
