--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "extend": "~1.2.1",
     "moment": "~2.5.1",
     "soap": "~0.4.0",
-    "q": "~1.0.0",
+    "q": "~1.0.1",
     "sendgrid": "~1.0.2",
     "bcrypt-nodejs": "0.0.3",
-    "mongoose-q": "0.0.9"
+    "mongoose-q": "0.0.9",
+    "soap-q": "~0.1.2"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
