--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "soap-q": "~0.1.2",
     "lodash": "~2.4.1",
     "formidable": "~1.0.14",
-    "fs-extra": "~0.8.1"
+    "fs-extra": "~0.8.1",
+    "downsize": "0.0.6"
   },
   "devDependencies": {
     "grunt": "~0.4.2",
